--- a/app/views/notifications/_form.html.haml
+++ b/app/views/notifications/_form.html.haml
@@ -1,5 +1,6 @@
 = semantic_form_for @notification do |f|
   = f.inputs do
     = f.input :body
-    = f.input :time
+    = f.input :natural_time, :as => :string
+    = f.input :recurring, :as => :select, :collection => ["Every Day", "Every Week", "Every Month"]
   = f.actions
