--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,30 @@
     %p.alert 
       = alert
       
-    = yield
+    %div.navbar.navbar-fixed-top
+      %div.navbar-inner
+        %div.container
+          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+
+          %a.brand(href='#{root_path}')
+            %span.never-forgetify-logo
+              NeverForgetify
+
+          %div.nav-collapse
+            %ul.nav
+              - if current_user
+                %li
+                  = link_to "Log out", logout_path
+              - else
+                %li
+                  = link_to "Sign up", new_user_registration_path
+                %li
+                  = link_to "Log in", login_path
+
+.container
+  .row
+    .span9
+      = yield
