--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -15,3 +15,5 @@
         = schedule.time.localtime.strftime("%A %b %-d %Y at %I:%M:%S %p")
       %td
         = link_to "Delete", notification_schedule_path(@notification, schedule), confirm: "Are you sure", method: :delete
+%br
+=link_to "Back", notifications_path
