allow password reset via sms

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,4 +3,5 @@
   %li First Name: #{@user.first_name}
   %li Last Name: #{@user.last_name}
   %li Phone Number: #{@user.phone_number}
+=link_to "Reset Password", reset_password_form_path
     
