--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -1,23 +1,17 @@
 %br
-%table
+=render 'form'
+%table.table#my-notifications
   %tr
-    %th
-      = Notification
-    %th
-      = 'Date / Time'
-    %th
-    %th
+    %th= Notification
+    %th Date / Time
+    %th Options
   - @notifications.each do |notification|
     
     %tr
-      %td
-        = link_to notification.body, notification_schedules_path(notification)
-      %td
-        = notification.time.localtime.strftime("%A %b %-d %Y at %I:%M:%S %p")
+      %td= link_to notification.body, notification_schedules_path(notification)
+      %td= notification.time.localtime.strftime("%A %b %-d %Y at %I:%M:%S %p")
       %td
         = link_to "Edit", edit_notification_path(notification)
         = link_to "Delete", notification_path(notification), confirm: "Are you sure", method: :delete
-%br
-= link_to "Add New Notification", new_notification_path
 
   
