--- a/app/views/notifications/_form.html.haml
+++ b/app/views/notifications/_form.html.haml
@@ -13,7 +13,7 @@
         = f.text_field :natural_time, :as => :string, :placeholder => "Time e.g. Tomorrow at 2pm, Friday at 7:30am, 10/13/2012 7:39pm, In 1 hour ", :class => 'row-fluid'
       .span3.recur
         = f.select :recurring, :collection => ["Not Recurring","Every Day", "Every Week", "Every Month"]
-      .span2.type
+      .span3.type
         = f.label :send_sms  do
           = f.check_box :send_sms, :checked => true
           SMS
@@ -21,5 +21,9 @@
         = f.label :send_email do
           = f.check_box :send_email
           Email
-      .span3#submit-button
+          
+        = f.label :send_twitter do
+          = f.check_box :send_twitter
+          Twitter
+      .span2#submit-button
         = f.submit :class => "btn btn-primary pull-right"
