--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -6,12 +6,15 @@
     %th Date / Time
     %th Options
   - @notifications.each do |notification|
-    
-    %tr
-      %td= link_to notification.body, notification_schedules_path(notification)
-      %td= notification.time.localtime.strftime("%A %b %-d %Y at %I:%M:%S %p")
-      %td
-        = link_to "Edit", edit_notification_path(notification)
-        = link_to "Delete", notification_path(notification), confirm: "Are you sure", method: :delete
+    -if notification.sent_time.nil? || notification.sent_time > DateTime.now
+      %tr
+        %td= link_to notification.body, notification_schedules_path(notification)
+        %td= notification.time.localtime.strftime("%A %b %-d %Y at %I:%M:%S %p")
+        %td
+          = link_to "Edit", edit_notification_path(notification)
+          = link_to "Delete", notification_path(notification), confirm: "Are you sure", method: :delete
+
+.pagination
+  =paginate @notifications
 
   
