--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,10 +8,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    %p.notice 
-      = notice
-    %p.alert 
-      = alert
+    .flash_helper=flash_helper
       
     %div.navbar.navbar-fixed-top
       %div.navbar-inner
