--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
 %br
-%ul
+%ul.user-profile
   %li First Name: #{@user.first_name}
   %li Last Name: #{@user.last_name}
   %li Phone Number: #{@user.phone_number}
