--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,8 +18,22 @@ body{
 }
 
 span.never-forgetify-logo{
-  color: gray;
-	font-family: Futura;
+  color: #E69F11;
+	font-family: 'Miniver', cursive;
+	font-size: 30px;
 }
 
+.row{
+	background-color: #F4F4F4;
+	padding: 20px;
+	border-radius: 30px 30px 30px 30px;
+	box-shadow: 5px 5px 10px #888;
+	margin-top:70px;
+}
+.row-fluid.nav-collapse{
+	margin-top:-12px;
+}
 
+.user-profile{
+	list-style:none;
+}
